--- a/simple.html
+++ b/simple.html
@@ -8,6 +8,7 @@
     <style>
         body {
             display: flex;
+            flex-flow: row nowrap;
         }
 
         div {
@@ -17,23 +18,26 @@
         }
 
         div:nth-child(1) {
-            flex: 1 1 200px;
+            flex: 1;
+            /*flex: 1 1 200px;*/
         }
 
         div:nth-child(2) {
-            flex: 2 1 200px;
+            flex: 2;
+            /*flex: 2 1 200px;*/
         }
 
         div:nth-child(3) {
-            flex: 3 1 200px;
+            flex: 3;
+            /*flex: 3 1 200px;*/
         }
     </style>
 </head>
 
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
 </body>
 
 </html>
